--- a/app/src/main/res/layout/fragment_input.xml
+++ b/app/src/main/res/layout/fragment_input.xml
@@ -13,7 +13,10 @@
         android:gravity="center"/>
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv"
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+        android:orientation="vertical"
         android:layout_width="match_parent"
+        app:layout_constraintBottom_toTopOf="@id/buttonNext"
         app:layout_constraintTop_toBottomOf="@id/title"
         android:layout_height="0dp"/>
 
