--- a/app/src/main/res/layout/fragment_input.xml
+++ b/app/src/main/res/layout/fragment_input.xml
@@ -9,6 +9,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Input for field 1"
+        android:textSize="24sp"
         app:layout_constraintTop_toTopOf="parent"
         android:gravity="center"/>
     <androidx.recyclerview.widget.RecyclerView
