Added base features to custom view.

--- a/app/src/main/res/values/custom_views.xml
+++ b/app/src/main/res/values/custom_views.xml
@@ -53,7 +53,7 @@
         <attr name="borderColorB" format="integer" />
         <attr name="borderColorClear" format="boolean" />
         <attr name="borderWidthLocal" format="integer" />
-        <attr name="borderPadding" format="integer" />
+        <attr name="bottomPadding" format="integer" />
         <attr name="colorR" format="integer" />
         <attr name="colorG" format="integer" />
         <attr name="colorB" format="integer" />
