--- a/app/src/main/res/layout/fragment_custom.xml
+++ b/app/src/main/res/layout/fragment_custom.xml
@@ -5,6 +5,7 @@
     android:layout_height="match_parent">
 
     <TextView
+        android:id="@+id/testTextVies"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:text="I AM CUSTOM HI"/>
